--- a/base of base/style.css
+++ b/base of base/style.css
@@ -1,7 +1,11 @@
-body{
+:root{
   box-sizing: content-box;
   margin: 0 auto;
+  width: 600px;
   font-size: 20px;
+}
+
+body{
   background: url('mc_logo.jpg') 50% 0/ cover no-repeat ;
 }
 
